2005-06-13 TADA Tadashi <sho@spc.gr.jp>
	* skel/diary.rhtml: TSUKKOMI 'Before...' links to '#c00'. thanks Kazuhiro
	  NISHIYAMA <zn at mbf.nifty.com>
	* README.html: s/GPL/GPL2/g

2005-06-13 hahahaha <rin_ne at big.or.jp>
	* index.rb: support 'n days before/after' mode when using
	  ErrorDocument/Action.

2005-06-09 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.1

2005-06-07 TADA Tadashi <sho@spc.gr.jp>
	* doc/README.html, doc/INSTALL.html: separate INSTALL from README.

2005-06-06 TADA Tadashi <sho@spc.gr.jp>
	* plugin/ja/00default.rb: change words in navi_next/prev_ndays.

2005-06-05 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: hide 'n days' navigation and referer accessed by bots.

2005-06-04 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.sample: add <%=navi%> in footer.
	* plugin/00default.rb: separate navi_user_* methods from navi_user method.
	* plugin/00default.rb: "prev/next month" navigation in month mode.

2005-06-03 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb, misc/style/wiki/wiki_style.rb: my plugin support 'n days before/after' mode.
	* misc/style/rd/rd_style.rb: my plugin support 'n days before/after' mode.
	* tdiary.rb: set limit 30 days on 'n days before/after' mode.
	* plugin/00default.rb: anchor plugin support 'n days before/after' mode.

2005-06-02 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, plugin/00default.rb: "N days before/after" navigation
	  button [EXPERIMENTAL]

2005-06-01 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, index.rb: N days mode [EXPERIMENTAL]

2005-05-29 KURODA Hiraku <hiraku at hinet.mydns.jp>
	* escape quote in TSUKKOMI.

2005-05-18  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/defaultio.rb: support CRLF.

2005-05-18 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: fix typo by supporting ruby 1.9 HEAD.
	* doc/HOWTO-make-io.rd: fix about IO#transaction block parameter.

2005-05-16  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary.rb: support ruby 1.9 HEAD.

2005-05-15  Kazuhiko  <kazuhiko@fdiary.net>